--- a/res/layout/view_identity_activity.xml
+++ b/res/layout/view_identity_activity.xml
@@ -7,17 +7,97 @@
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="16dip"
                   android:layout_marginRight="16dip"
-                  android:layout_gravity="center"
-                  android:orientation="vertical">
+                  android:layout_gravity="top"
+                  android:orientation="vertical"
+                  android:paddingTop="25dp">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/mnemonic_fingerprint_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="sans-serif-light"
+                android:textColor="#ff888888"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:text="Mnemonic Fingerprint" />
+
+            <ImageButton
+                android:id="@+id/mnemonic_help_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_help"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:background="@android:color/transparent"
+                android:contentDescription="Help"/>
+            </RelativeLayout>
 
         <TextView
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:typeface="monospace"
-                android:id="@+id/identity_fingerprint"
+                android:layout_weight="1.1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:fontFamily="serif"
+                android:textColor="?conversation_list_item_subject_color"
+                android:id="@+id/identity_fingerprint_mnemonic"
                 android:text=""
-                android:padding="7dip" />
+                android:padding="7dip"
+                />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:id="@+id/fingerprint_or_separator">
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#ff93d22b"
+                android:gravity="center_vertical"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="sans-serif-light"
+                android:textColor="#ffeeeeee"
+                android:textStyle="italic"
+                android:text="or"
+                android:background="#ff93d22b"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"/>
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:fontFamily="sans-serif-light"
+            android:textColor="#ff999999"
+            android:text="Hex Fingerprint" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:typeface="monospace"
+            android:id="@+id/identity_fingerprint"
+            android:text=""
+            android:textColor="?conversation_list_item_subject_color"
+            android:padding="7dip" />
+
 
     </LinearLayout>
 </ScrollView>
