--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -30,4 +30,9 @@
     <color name="conversation_item_received_background_dark">#ff333333</color>
     <color name="conversation_item_received_shadow_light">#ffd5d5d5</color>
     <color name="conversation_item_received_shadow_dark">#ff222222</color>
+
+    <color name="circular_progress_default_progress">#bada55</color>
+    <color name="circular_progress_default_background">#787878</color>
+    <color name="circular_progress_default_title">#bada55</color>
+    <color name="circular_progress_default_subtitle">#D1D1D1</color>
 </resources>
