--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="conversation_item_corner_radius">3dp</dimen>
     <dimen name="conversation_item_drop_shadow_dist">2dp</dimen>
     <dimen name="contact_selection_photo_size">50dp</dimen>
+
+    <dimen name="step_pager_tab_width">32dp</dimen>
+    <dimen name="step_pager_tab_height">3dp</dimen>
+    <dimen name="step_pager_tab_spacing">4dp</dimen>
 </resources>
