--- a/res/layout/registration_activity.xml
+++ b/res/layout/registration_activity.xml
@@ -13,83 +13,40 @@
                   android:gravity="center_vertical"
                   android:orientation="vertical">
 
-        <TextView style="@style/Registration.Description"
-                  android:layout_width="fill_parent"
-                  android:layout_marginBottom="8dip"
-                  android:layout_marginTop="16dip"
-                  android:text="@string/registration_activity__textsecure_can_use_instant_messages_to_avoid_sms_charges_when_communicating_with_other_textsecure_users"/>
+        <FrameLayout android:id="@+id/fragment_view"
+                     android:layout_width="match_parent"
+                     android:layout_height="0dp"
+                     android:layout_weight="1" >
+        </FrameLayout>
 
-        <TextView style="@style/Registration.Description"
-                  android:layout_width="fill_parent"
-                  android:layout_marginBottom="16dip"
-                  android:text="@string/registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy"/>
+        <org.thoughtcrime.securesms.components.StepPagerStrip
+            android:id="@+id/step_pager_strip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
 
-        <TextView style="@style/Registration.Label"
-                  android:layout_width="fill_parent"
-                  android:textAllCaps="true"
-                  android:text="@string/registration_activity__your_country" />
-
-        <Spinner android:id="@+id/country_spinner"
-                 android:layout_width="fill_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginBottom="16dip" />
-
-        <TextView style="@style/Registration.Label"
-                  android:layout_width="fill_parent"
-                  android:textAllCaps="true"
-                  android:text="@string/registration_activity__your_country_code_and_phone_number" />
-
-        <LinearLayout android:orientation="horizontal"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content">
-
-            <TextView android:layout_width="wrap_content"
+        <LinearLayout style="?android:attr/buttonBarStyle"
+                      android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:textSize="20sp"
-                      style="@style/Registration.Constant"
-                      android:text="+" />
-
-            <EditText android:id="@+id/country_code"
-                      android:layout_width="55dip"
-                      android:layout_height="wrap_content"
-                      android:singleLine="true"
-                      android:gravity="center"
-                      android:inputType="phone"
-                      android:digits="0123456789" />
-
-            <EditText android:id="@+id/number"
-                      android:layout_width="0dip"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:inputType="phone"
-                      android:hint="@string/registration_activity__phone_number"
-                      android:gravity="center"
-                      android:singleLine="true"/>
-
-        </LinearLayout>
-
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginTop="16dip"
-                      android:layout_marginBottom="16dip"
-                      android:layout_gravity="right"
                       android:orientation="horizontal">
 
-            <Button android:id="@+id/skipButton"
-                    android:text="@string/registration_activity__skip"
+            <Button android:id="@+id/button_previous"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:background="@drawable/selectable_item_background"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dip"
                     android:layout_weight="1"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    android:layout_height="wrap_content"
+                    android:text="Skip" />
 
-            <Button android:id="@+id/registerButton"
-                    android:text="@string/registration_activity__register"
+            <Button android:id="@+id/button_next"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:background="@drawable/selectable_item_background"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    android:layout_height="wrap_content"
+                    android:text="Next" />
+
         </LinearLayout>
-
     </LinearLayout>
+
 </ScrollView>
