--- a/res/layout/auto_initiate_activity.xml
+++ b/res/layout/auto_initiate_activity.xml
@@ -22,17 +22,16 @@
                   android:layout_marginBottom="16dip"
                   android:gravity="right">
 
+        <Button android:id="@+id/cancel_button"
+                android:text="@android:string/cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
         <Button android:id="@+id/initiate_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/auto_initiate_activity__initiate_exchange"
                 android:gravity="center"/>
-
-        <Button android:id="@+id/cancel_button"
-                android:text="@android:string/cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                tools:ignore="ButtonOrder"/>
     </LinearLayout>
 </LinearLayout>
