--- a/res/layout/database_migration_activity.xml
+++ b/res/layout/database_migration_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:fillViewport="true"
@@ -10,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >
-        
+
         <LinearLayout android:id="@+id/prompt_layout"
                       android:paddingRight="16dip"
                       android:paddingLeft="16dip"
@@ -94,9 +93,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="0/100"
-                    android:textSize="12.0sp"
-                    tools:ignore="HardcodedText" />
+                    android:text="@string/database_migration_activity__import_status"
+                    android:textSize="12.0sp" />
 
                 <TextView
                     style="@style/Registration.Constant"
