--- a/res/layout/registration_activity.xml
+++ b/res/layout/registration_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:fillViewport="true"
@@ -47,8 +47,7 @@
                       android:layout_height="wrap_content"
                       android:textSize="20sp"
                       style="@style/Registration.Constant"
-                      android:text="+"
-                      tools:ignore="HardcodedText" />
+                      android:text="@string/registration_activity__number_prefix" />
 
             <EditText android:id="@+id/country_code"
                       android:layout_width="55dip"
