--- a/res/layout/database_migration_activity.xml
+++ b/res/layout/database_migration_activity.xml
@@ -83,7 +83,7 @@
             
             <RelativeLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginTop="15dip"
                 android:layout_weight="1.0" >
 
