--- a/res/layout/auto_initiate_activity.xml
+++ b/res/layout/auto_initiate_activity.xml
@@ -23,13 +23,15 @@
 
         <Button android:id="@+id/cancel_button"
                 android:text="@android:string/cancel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"/>
 
         <Button android:id="@+id/initiate_button"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="@string/auto_initiate_activity__initiate_exchange"
                 android:gravity="center"/>
     </LinearLayout>
