--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -8,6 +8,7 @@
     </style>
 
     <style name="TextSecure.LightTheme" parent="@style/Theme.Sherlock.Light">
+        <item name="android:textColorSecondary">#ff777777</item>
         <item name="android:actionBarStyle">@style/TextSecure.LightActionBar</item>
         <item name="actionBarStyle">@style/TextSecure.LightActionBar</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -93,6 +94,7 @@
     </style>
 
     <style name="TextSecure.DarkTheme" parent="@style/TextSecure.Dark">
+        <item name="android:textColorSecondary">#ff999999</item>
         <item name="conversation_list_item_background_read">@drawable/conversation_list_item_background_read_dark</item>
         <item name="conversation_list_item_background_unread">@drawable/conversation_list_item_background_unread_dark</item>
         <item name="conversation_list_item_background_selected">@drawable/list_selected_holo_dark</item>
