--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -30,7 +30,7 @@
                             android:summary="@string/preferences__request_a_delivery_report_for_each_sms_message_you_send"
                             android:title="@string/preferences__sms_delivery_reports" />
     </PreferenceCategory>
-    <PreferenceCategory android:title="@string/preferences__notifications">
+    <PreferenceScreen android:title="@string/preferences__notifications" android:summary="On" android:key="notifications" android:persistent="false">
         <CheckBoxPreference android:key="pref_key_enable_notifications"
                             android:title="@string/preferences__notifications"
                             android:summary="@string/preferences__display_message_notifications_in_status_bar"
@@ -70,7 +70,7 @@
                             android:title="@string/preferences__vibrate"
                             android:summary="@string/preferences__also_vibrate_when_notified" />
 
-  </PreferenceCategory>
+  </PreferenceScreen>
 
   <PreferenceCategory android:title="@string/preferences__input_settings">
       <CheckBoxPreference android:defaultValue="false"
