--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:key="push_sms_category" android:title="@string/preferences__push_sms_category">
         <CheckBoxPreference android:defaultValue="false"
                             android:key="pref_toggle_push_messaging"
                             android:title="@string/preferences__use_data_channel"
                             android:summary="@string/preferences__use_the_data_channel_for_communication_with_other_textsecure_users"/>
 
+    <PreferenceScreen android:key="sms_mms_category" android:title="SMS/MMS" android:summary="Incoming on, outgoing off">
         <CheckBoxPreference android:defaultValue="true"
                           android:key="pref_all_sms"
                           android:summary="@string/preferences__use_textsecure_for_viewing_and_storing_all_incoming_text_messages"
@@ -29,11 +29,13 @@
                             android:key="pref_delivery_report_sms"
                             android:summary="@string/preferences__request_a_delivery_report_for_each_sms_message_you_send"
                             android:title="@string/preferences__sms_delivery_reports" />
-    </PreferenceCategory>
-    <PreferenceCategory android:title="@string/preferences__miscellaneous">
-        <PreferenceScreen android:key="pref_notification_screen"
-                          android:title="@string/preferences__notifications">
 
+        <Preference android:key="pref_mms_preferences"
+                    android:title="@string/preferences__advanced_mms_access_point_names"/>
+
+    </PreferenceScreen>
+    <PreferenceScreen android:key="pref_notification_screen"
+                      android:title="@string/preferences__notifications">
             <CheckBoxPreference android:key="pref_key_enable_notifications"
                                 android:title="@string/preferences__notifications"
                                 android:summary="@string/preferences__display_message_notifications_in_status_bar"
@@ -75,26 +77,6 @@
 
         </PreferenceScreen>
 
-        <PreferenceScreen android:key="pref_storage_screen"
-                          android:title="@string/preferences__delete_old_messages">
-            <CheckBoxPreference android:defaultValue="false"
-                                android:key="pref_trim_threads"
-                                android:summary="@string/preferences__automatically_delete_older_messages_once_a_conversation_thread_exceeds_a_specified_length"
-                                android:title="@string/preferences__delete_old_messages" />
-
-            <EditTextPreference android:defaultValue="500"
-                                android:key="pref_trim_length"
-                                android:title="@string/preferences__conversation_length_limit"
-                                android:inputType="number"
-                                android:dependency="pref_trim_threads" />
-
-            <Preference android:key="pref_trim_now"
-                        android:title="@string/preferences__trim_all_threads_now"
-                        android:summary="@string/preferences__scan_through_all_conversation_threads_and_enforce_conversation_length_limits"
-                        android:dependency="pref_trim_threads" />
-
-        </PreferenceScreen>
-
         <PreferenceScreen android:key="pref_password_screen"
                           android:title="@string/preferences__passphrase">
             <CheckBoxPreference android:key="pref_disable_passphrase"
@@ -122,61 +104,65 @@
                 android:dependency="pref_timeout_passphrase"
                 android:dialogTitle="@string/preferences__pref_timeout_interval_dialogtitle" />
 
+            <CheckBoxPreference android:defaultValue="true"
+                                android:key="pref_screen_security"
+                                android:title="@string/preferences__screen_security"
+                                android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots"
+                                android:dependency="pref_disable_passphrase"/>
+
         </PreferenceScreen>
 
-  </PreferenceCategory>
+    <PreferenceScreen android:key="pref_storage_screen"
+                      android:title="@string/preferences__delete_old_messages">
+        <CheckBoxPreference android:defaultValue="false"
+                            android:key="pref_trim_threads"
+                            android:summary="@string/preferences__automatically_delete_older_messages_once_a_conversation_thread_exceeds_a_specified_length"
+                            android:title="@string/preferences__delete_old_messages" />
 
-  <PreferenceCategory android:title="@string/preferences__input_settings">
-      <CheckBoxPreference android:defaultValue="false"
-                          android:key="pref_enter_key"
-                          android:title="@string/preferences__enable_enter_key_title"
-                          android:summary="@string/preferences__replace_smiley_with_enter_key"/>
+        <EditTextPreference android:defaultValue="500"
+                            android:key="pref_trim_length"
+                            android:title="@string/preferences__conversation_length_limit"
+                            android:inputType="number"
+                            android:dependency="pref_trim_threads" />
 
-      <CheckBoxPreference android:defaultValue="false"
-                          android:key="pref_enter_sends"
-                          android:summary="@string/preferences__pressing_the_enter_key_will_send_text_messages"
-                          android:title="@string/preferences__pref_enter_sends_title" />
+        <Preference android:key="pref_trim_now"
+                    android:title="@string/preferences__trim_all_threads_now"
+                    android:summary="@string/preferences__scan_through_all_conversation_threads_and_enforce_conversation_length_limits"
+                    android:dependency="pref_trim_threads" />
 
-    </PreferenceCategory>
+    </PreferenceScreen>
 
-    <PreferenceCategory android:title="@string/preferences__appearance">
+
         <ListPreference android:key="pref_theme"
                         android:title="@string/preferences__theme"
                         android:entries="@array/pref_theme_entries"
                         android:entryValues="@array/pref_theme_values"
-                        android:defaultValue="light">
+                        android:defaultValue="light"
+                        android:summary="Light">
         </ListPreference>
 
         <ListPreference android:key="pref_language"
                         android:title="@string/preferences__language"
                         android:entries="@array/language_entries"
                         android:entryValues="@array/language_values"
+                        android:summary="Default"
                         android:defaultValue="zz"/>
-    </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/preferences__display_settings" android:key="pref_display_category">
-      <Preference android:key="pref_choose_identity"
+    <CheckBoxPreference android:defaultValue="false"
+                        android:key="pref_enter_key"
+                        android:title="@string/preferences__enable_enter_key_title"
+                        android:summary="@string/preferences__replace_smiley_with_enter_key"/>
+
+    <CheckBoxPreference android:defaultValue="false"
+                        android:key="pref_enter_sends"
+                        android:summary="@string/preferences__pressing_the_enter_key_will_send_text_messages"
+                        android:title="@string/preferences__pref_enter_sends_title" />
+
+    <Preference android:key="pref_choose_identity"
                   android:title="@string/preferences__choose_identity"
                   android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory android:key="advanced_category" android:title="@string/preferences__advanced">
-       <CheckBoxPreference android:defaultValue="true"
-                           android:key="pref_auto_complete_key_exchange"
-                           android:title="@string/preferences__complete_key_exchanges"
-                           android:summary="@string/preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key" />
-
-       <CheckBoxPreference android:defaultValue="true"
-                           android:key="pref_screen_security"
-                           android:title="@string/preferences__screen_security"
-                           android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots" />
-
-        <Preference android:key="pref_mms_preferences"
-                    android:title="@string/preferences__advanced_mms_access_point_names"/>
 
         <Preference android:key="pref_submit_debug_logs"
                     android:title="@string/preferences__submit_debug_log"/>
 
-    </PreferenceCategory>
 </PreferenceScreen>
